--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <form action="input-form" method="post">
+      <input type="text" name="title" id="" />
+      <textarea name="content" id="" cols="30" rows="10"></textarea>
+    </form>
+  </body>
 </html>
