--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="w-full h-full">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BLOG</title>
     <link rel="stylesheet" href="../src/styles/style.css" />
   </head>
-  <body>
+  <body class="w-full h-full">
     <div
       id="root"
-      class="flex justify-center items-center bg-red-600 w-screen h-screen"
+      class="flex justify-center items-center bg-red-600 w-full h-full"
     >
-      <div class="w-11/12 h-screen bg-yellow-800">
-        <div id="input-box"></div>
-        <aside id="postings" class="">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-        </aside>
-        <section>
-          <div></div>
-          <div></div>
-        </section>
+      <div class="w-11/12 h-2/4 bg-yellow-800">
+        <div class="w-8 h-1/4 bg-pink-400"></div>
+        <header class="w-24 h-52">
+          <div id="input-box" class="w-full h-full">
+            <button id="posting-button" class="bg-zinc-300">글 작성</button>
+          </div>
+        </header>
+
+        <main>
+          <aside id="postings" class="">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </aside>
+          <section>
+            <div></div>
+            <div></div>
+          </section>
+        </main>
       </div>
     </div>
   </body>
+  <script src="../src/client/main.js" type="module"></script>
 </html>
