element 관련 모듈 저장, 구조화

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="../src/styles/style.css" />
   </head>
   <body class="w-full h-full">
-    <div
-      id="root"
-      class="flex justify-center items-center bg-red-600 w-full h-full"
-    >
+    <div id="root">
       <div class="w-11/12 h-2/4 bg-yellow-800">
         <div class="w-8 h-1/4 bg-pink-400"></div>
         <header class="w-24 h-52">
@@ -34,5 +31,5 @@
       </div>
     </div>
   </body>
-  <script src="../src/client/main.js" type="module"></script>
+  <script src="../src/client/app.mjs" type="module"></script>
 </html>
