템플릿 모듈 폴더 && 모듈 추가

--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" class="w-full h-full">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BLOG</title>
     <link rel="stylesheet" href="../src/styles/style.css" />
   </head>
-  <body class="w-full h-full">
-    <div id="root">
-      <div class="w-11/12 h-2/4 bg-yellow-800">
-        <div class="w-8 h-1/4 bg-pink-400"></div>
-        <header class="w-24 h-52">
-          <div id="input-box" class="w-full h-full">
-            <button id="posting-button" class="bg-zinc-300">글 작성</button>
-          </div>
-        </header>
-
-        <main>
-          <aside id="postings" class="">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-          </aside>
-          <section>
-            <div></div>
-            <div></div>
-          </section>
-        </main>
-      </div>
-    </div>
+  <body>
+    <div id="root"></div>
   </body>
   <script src="../src/client/app.mjs" type="module"></script>
 </html>
