rootHtmlData.js 템플릿 수정 && 모달 클릭 이벤트 초기화

--- a/public/index.html
+++ b/public/index.html
@@ -10,4 +10,8 @@
     <div id="root"></div>
   </body>
   <script src="../src/client/app.mjs" type="module"></script>
+  <script
+    src="https://kit.fontawesome.com/c22cf359ff.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
