change file name 'src/postedHtml/app.mjs' => posted.mjs

--- a/public/html/posted.html
+++ b/public/html/posted.html
@@ -9,6 +9,7 @@
     <div id="root"></div>
     <h1>ㅎㅇ</h1>
   </body>
+  <script src="../../src/client/postedHtml/posted.mjs" type="module"></script>
   <script
     src="https://kit.fontawesome.com/c22cf359ff.js"
     crossorigin="anonymous"
