implemented 'objArrForStyle.js'

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
   </head>
-  <body>
+  <body id="body">
     <div id="root"></div>
   </body>
   <script src="../src/client/app.mjs" type="module"></script>
